[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/scenes/Maps/Walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/Enemies/Enemies/Wizard-Range.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/Items/Weapons/Dagger_OneUse.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/Maps/HolyDoor.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/art/monochrome_transparent_packed.png" type="Texture" id=6]
[ext_resource path="res://src/scenes/Maps/Levels/Lvl3_backstory.gd" type="Script" id=7]
[ext_resource path="res://src/scenes/Enemies/Enemies/Wizard-BEasy.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/scenes/Enemies/Enemies/Goblin.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/scenes/Items/Enviorement/Alter.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 36 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[node name="Lvl3_backstory" type="Node2D"]
script = ExtResource( 7 )

[node name="Walls" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -3145626, 20, 0, -3145596, 20, 0, -3145595, 20, 0, -3145594, 20, 0, -3145593, 20, 0, -3145585, 20, 0, -3145584, 20, 0, -3145583, 20, 0, -3145582, 20, 0, -3145581, 20, 0, -3145580, 20, 0, -3145579, 20, 0, -3080089, 20, 0, -3080063, 20, 0, -3080062, 20, 0, -3080061, 20, 0, -3080056, 20, 0, -3080055, 20, 0, -3080050, 20, 0, -3080042, 20, 0, -3014561, 20, 0, -3014553, 20, 0, -3014518, 20, 0, -3014506, 20, 0, -2949029, 20, 0, -2949028, 20, 0, -2949025, 20, 0, -2949017, 20, 0, -2948981, 20, 0, -2948970, 20, 0, -2883493, 20, 0, -2883491, 20, 0, -2883490, 20, 0, -2883489, 20, 0, -2883488, 20, 0, -2883487, 20, 0, -2883486, 20, 0, -2883485, 20, 0, -2883484, 20, 0, -2883483, 20, 0, -2883481, 20, 0, -2883445, 20, 0, -2883434, 20, 0, -2817953, 20, 0, -2817945, 20, 0, -2817908, 20, 0, -2817898, 20, 0, -2752456, 20, 0, -2752455, 20, 0, -2752454, 20, 0, -2752453, 20, 0, -2752437, 20, 0, -2752436, 20, 0, -2752435, 20, 0, -2752434, 20, 0, -2752417, 20, 0, -2752409, 20, 0, -2752372, 20, 0, -2752363, 20, 0, -2686922, 20, 0, -2686921, 20, 0, -2686920, 20, 0, -2686910, 20, 0, -2686909, 20, 0, -2686908, 20, 0, -2686902, 20, 0, -2686898, 20, 0, -2686881, 20, 0, -2686873, 20, 0, -2686836, 20, 0, -2686827, 20, 0, -2621386, 20, 0, -2621375, 20, 0, -2621374, 20, 0, -2621372, 20, 0, -2621367, 20, 0, -2621366, 20, 0, -2621361, 20, 0, -2621345, 20, 0, -2621337, 20, 0, -2621319, 20, 0, -2621301, 20, 0, -2621300, 20, 0, -2621292, 20, 0, -2555850, 20, 0, -2555839, 20, 0, -2555837, 20, 0, -2555836, 20, 0, -2555831, 20, 0, -2555825, 20, 0, -2555809, 20, 0, -2555801, 20, 0, -2555791, 20, 0, -2555790, 20, 0, -2555789, 20, 0, -2555783, 20, 0, -2555782, 20, 0, -2555767, 20, 0, -2555766, 20, 0, -2555756, 20, 0, -2490314, 20, 0, -2490313, 20, 0, -2490303, 20, 0, -2490301, 20, 0, -2490295, 20, 0, -2490289, 20, 0, -2490273, 20, 0, -2490265, 20, 0, -2490255, 20, 0, -2490253, 20, 0, -2490248, 20, 0, -2490246, 20, 0, -2490243, 20, 0, -2490242, 20, 0, -2490232, 20, 0, -2490221, 20, 0, -2424776, 20, 0, -2424775, 20, 0, -2424774, 20, 0, -2424767, 20, 0, -2424766, 20, 0, -2424759, 20, 0, -2424754, 20, 0, -2424737, 20, 0, -2424729, 20, 0, -2424726, 20, 0, -2424720, 20, 0, -2424719, 20, 0, -2424717, 20, 0, -2424712, 20, 0, -2424709, 20, 0, -2424707, 20, 0, -2424706, 20, 0, -2424697, 20, 0, -2424685, 20, 0, -2359237, 20, 0, -2359236, 20, 0, -2359235, 20, 0, -2359232, 20, 0, -2359231, 20, 0, -2359230, 20, 0, -2359223, 20, 0, -2359222, 20, 0, -2359221, 20, 0, -2359220, 20, 0, -2359219, 20, 0, -2359218, 20, 0, -2359201, 20, 0, -2359193, 20, 0, -2359191, 20, 0, -2359190, 20, 0, -2359184, 20, 0, -2359180, 20, 0, -2359176, 20, 0, -2359173, 20, 0, -2359171, 20, 0, -2359170, 20, 0, -2359162, 20, 0, -2359150, 20, 0, -2359149, 20, 0, -2293699, 20, 0, -2293696, 20, 0, -2293695, 20, 0, -2293687, 20, 0, -2293665, 20, 0, -2293657, 20, 0, -2293656, 20, 0, -2293653, 20, 0, -2293648, 20, 0, -2293644, 20, 0, -2293640, 20, 0, -2293636, 20, 0, -2293634, 20, 0, -2293626, 20, 0, -2293614, 20, 0, -2293613, 20, 0, -2228163, 20, 0, -2228160, 20, 0, -2228151, 20, 0, -2228150, 20, 0, -2228130, 20, 0, -2228121, 20, 0, -2228120, 20, 0, -2228117, 20, 0, -2228112, 20, 0, -2228109, 20, 0, -2228104, 20, 0, -2228100, 20, 0, -2228097, 20, 0, -2228090, 20, 0, -2228077, 20, 0, -2228076, 20, 0, -2162627, 20, 0, -2162624, 20, 0, -2162623, 20, 0, -2162614, 20, 0, -2162613, 20, 0, -2162594, 20, 0, -2162585, 20, 0, -2162581, 20, 0, -2162576, 20, 0, -2162574, 20, 0, -2162573, 20, 0, -2162568, 20, 0, -2162564, 20, 0, -2162561, 20, 0, -2162554, 20, 0, -2097092, 20, 0, -2097091, 20, 0, -2097087, 20, 0, -2097077, 20, 0, -2097076, 20, 0, -2097058, 20, 0, -2097049, 20, 0, -2097045, 20, 0, -2097040, 20, 0, -2097039, 20, 0, -2097032, 20, 0, -2097028, 20, 0, -2097024, 20, 0, -2097018, 20, 0, -2097003, 20, 0, -2031561, 20, 0, -2031560, 20, 0, -2031559, 20, 0, -2031558, 20, 0, -2031557, 20, 0, -2031556, 20, 0, -2031551, 20, 0, -2031550, 20, 0, -2031539, 20, 0, -2031538, 20, 0, -2031537, 20, 0, -2031522, 20, 0, -2031513, 20, 0, -2031509, 20, 0, -2031508, 20, 0, -2031504, 20, 0, -2031496, 20, 0, -2031488, 20, 0, -2031481, 20, 0, -2031467, 20, 0, -1966014, 20, 0, -1966013, 20, 0, -1966012, 20, 0, -1966011, 20, 0, -1965986, 20, 0, -1965977, 20, 0, -1965973, 20, 0, -1965972, 20, 0, -1965968, 20, 0, -1965967, 20, 0, -1965963, 20, 0, -1965960, 20, 0, -1965952, 20, 0, -1965945, 20, 0, -1900450, 20, 0, -1900431, 20, 0, -1900430, 20, 0, -1900429, 20, 0, -1900428, 20, 0, -1900427, 20, 0, -1900424, 20, 0, -1900408, 20, 0, -1834914, 20, 0, -458769, 20, 0, -458768, 21, 0, -458767, 21, 0, -458766, 21, 0, -458765, 21, 0, -458764, 21, 0, -458763, 21, 0, -458762, 21, 0, -458761, 21, 0, -458760, 21, 0, -458759, 21, 0, -458758, 21, 0, -458757, 21, 0, -458756, 21, 0, -458755, 21, 0, -458754, 21, 0, -458753, 21, 0, -524288, 21, 0, -524287, 21, 0, -524286, 21, 0, -524285, 21, 0, -524284, 21, 0, -524283, 21, 0, -524282, 21, 0, -524281, 21, 0, -524280, 21, 0, -524279, 21, 0, -524278, 21, 0, -524277, 21, 0, -524276, 21, 0, -524275, 21, 0, -524274, 21, 0, -524273, 21, 0, -524272, 21, 0, -524271, 21, 0, -524270, 21, 0, -524269, 22, 0, -393233, 23, 0, -458733, 27, 0, -327697, 23, 0, -393197, 27, 0, -262161, 23, 0, -327661, 27, 0, -196625, 23, 0, -262125, 27, 0, -131089, 23, 0, -196589, 27, 0, -65553, 23, 0, -131053, 27, 0, -17, 23, 0, -65517, 27, 0, 65519, 23, 0, 19, 27, 0, 131055, 23, 0, 65555, 27, 0, 196591, 23, 0, 131091, 27, 0, 262127, 23, 0, 196627, 27, 0, 327663, 24, 0, 327664, 25, 0, 327665, 25, 0, 327666, 25, 0, 327667, 25, 0, 327668, 25, 0, 327669, 25, 0, 327670, 25, 0, 262158, 25, 0, 262159, 25, 0, 262160, 25, 0, 262161, 25, 0, 262162, 25, 0, 262163, 26, 0, 393207, 23, 0, 327693, 27, 0, 458743, 23, 0, 393229, 27, 0, 524279, 23, 0, 458765, 27, 0, 589815, 23, 0, 524301, 27, 0, 655351, 23, 0, 589837, 27, 0, 720841, 32, 0, 720842, 33, 0, 720843, 33, 0, 720844, 33, 0, 720845, 33, 0, 720846, 33, 0, 720847, 33, 0, 720848, 33, 0, 720849, 33, 0, 720850, 33, 0, 720851, 33, 0, 720852, 33, 0, 720853, 33, 0, 720854, 33, 0, 720855, 33, 0, 720856, 33, 0, 720857, 33, 0, 720858, 33, 0, 720859, 33, 0, 720860, 33, 0, 720861, 33, 0, 720862, 33, 0, 720863, 33, 0, 720864, 33, 0, 720865, 33, 0, 720866, 33, 0, 720867, 33, 0, 720868, 33, 0, 720869, 33, 0, 720870, 33, 0, 720871, 33, 0, 720872, 33, 0, 720873, 33, 0, 720874, 33, 0, 720875, 33, 0, 720876, 33, 0, 720877, 33, 0, 720878, 33, 0, 720879, 34, 0, 720887, 23, 0, 655373, 27, 0, 786377, 39, 0, 786415, 35, 0, 786423, 23, 0, 720909, 27, 0, 851907, 20, 0, 851908, 21, 0, 851909, 22, 0, 851913, 39, 0, 851951, 35, 0, 851959, 23, 0, 786445, 27, 0, 917443, 23, 0, 917445, 27, 0, 917449, 39, 0, 917487, 35, 0, 917495, 23, 0, 851981, 27, 0, 982979, 23, 0, 982981, 27, 0, 982985, 39, 0, 983023, 35, 0, 983031, 23, 0, 917517, 27, 0, 1048513, 28, 0, 1048514, 21, 0, 1048518, 21, 0, 1048519, 22, 0, 1048521, 39, 0, 1048559, 35, 0, 1048567, 23, 0, 983053, 27, 0, 1114049, 23, 0, 1114055, 27, 0, 1114057, 27, 0, 1114095, 35, 0, 1114103, 23, 0, 1048589, 27, 0, 1179585, 23, 0, 1179591, 27, 0, 1179592, 25, 0, 1179593, 26, 0, 1179631, 35, 0, 1179639, 23, 0, 1114125, 27, 0, 1245121, 23, 0, 1245167, 35, 0, 1245175, 23, 0, 1179661, 27, 0, 1310657, 23, 0, 1310703, 35, 0, 1310711, 23, 0, 1245197, 27, 0, 1376193, 24, 0, 1376194, 21, 0, 1376195, 21, 0, 1376196, 21, 0, 1376197, 21, 0, 1376198, 21, 0, 1376199, 21, 0, 1376200, 21, 0, 1376239, 35, 0, 1376247, 23, 0, 1310733, 27, 0, 1441737, 23, 0, 1441775, 35, 0, 1441783, 23, 0, 1376269, 27, 0, 1507273, 39, 0, 1507311, 35, 0, 1507319, 23, 0, 1441805, 27, 0, 1572809, 39, 0, 1572847, 35, 0, 1572855, 23, 0, 1507341, 27, 0, 1638345, 39, 0, 1638383, 35, 0, 1638391, 23, 0, 1572877, 27, 0, 1703881, 39, 0, 1703919, 35, 0, 1703927, 23, 0, 1638413, 27, 0, 1638428, 32, 0, 1638429, 33, 0, 1638430, 33, 0, 1638431, 33, 0, 1638432, 33, 0, 1638433, 33, 0, 1638434, 33, 0, 1638435, 33, 0, 1638436, 33, 0, 1638437, 33, 0, 1638438, 33, 0, 1638439, 34, 0, 1769417, 38, 0, 1769455, 36, 0, 1769463, 23, 0, 1703949, 27, 0, 1703963, 35, 0, 1703975, 35, 0, 1834954, 33, 0, 1834955, 33, 0, 1834956, 33, 0, 1834957, 33, 0, 1834958, 33, 0, 1834959, 33, 0, 1834960, 33, 0, 1834961, 33, 0, 1834962, 33, 0, 1834963, 33, 0, 1834964, 33, 0, 1834965, 33, 0, 1834966, 33, 0, 1834967, 33, 0, 1834968, 33, 0, 1834969, 33, 0, 1834970, 39, 0, 1834975, 39, 0, 1834976, 33, 0, 1834977, 33, 0, 1834978, 33, 0, 1834979, 33, 0, 1834980, 33, 0, 1834981, 33, 0, 1834982, 33, 0, 1834983, 33, 0, 1834984, 33, 0, 1834985, 33, 0, 1834986, 33, 0, 1834987, 33, 0, 1834988, 33, 0, 1834989, 33, 0, 1834990, 33, 0, 1834999, 23, 0, 1769485, 27, 0, 1769499, 35, 0, 1769511, 35, 0, 1900506, 39, 0, 1900511, 39, 0, 1900535, 23, 0, 1835021, 27, 0, 1835035, 35, 0, 1835047, 35, 0, 1966042, 39, 0, 1966047, 39, 0, 1966071, 24, 0, 1966072, 25, 0, 1966073, 25, 0, 1966074, 25, 0, 1966075, 25, 0, 1966076, 25, 0, 1966077, 25, 0, 1966078, 25, 0, 1966079, 25, 0, 1900548, 25, 0, 1900549, 25, 0, 1900550, 25, 0, 1900551, 25, 0, 1900552, 25, 0, 1900553, 25, 0, 1900554, 25, 0, 1900555, 25, 0, 1900556, 25, 0, 1900557, 26, 0, 1900571, 35, 0, 1900583, 35, 0, 2031578, 39, 0, 2031583, 39, 0, 1966080, 23, 0, 1966083, 27, 0, 1966107, 35, 0, 1966119, 35, 0, 2097114, 39, 0, 2097119, 39, 0, 2031616, 23, 0, 2031619, 27, 0, 2031643, 35, 0, 2031655, 35, 0, 2162650, 39, 0, 2162655, 39, 0, 2097152, 23, 0, 2097155, 27, 0, 2097179, 35, 0, 2097191, 35, 0, 2228186, 39, 0, 2228191, 39, 0, 2162688, 23, 0, 2162691, 27, 0, 2162715, 35, 0, 2162727, 35, 0, 2293722, 39, 0, 2293727, 38, 0, 2293728, 37, 0, 2293729, 37, 0, 2293730, 37, 0, 2293731, 37, 0, 2293732, 37, 0, 2293733, 37, 0, 2293734, 25, 0, 2293735, 25, 0, 2293736, 25, 0, 2293737, 25, 0, 2293738, 25, 0, 2293739, 25, 0, 2293740, 25, 0, 2293741, 25, 0, 2293742, 25, 0, 2293743, 25, 0, 2293744, 25, 0, 2293745, 25, 0, 2293746, 25, 0, 2293747, 25, 0, 2293748, 25, 0, 2293749, 25, 0, 2293750, 25, 0, 2293751, 25, 0, 2293752, 25, 0, 2293753, 25, 0, 2293754, 25, 0, 2293755, 25, 0, 2293756, 25, 0, 2293757, 25, 0, 2293758, 25, 0, 2293759, 25, 0, 2228224, 23, 0, 2228227, 27, 0, 2228228, 25, 0, 2228229, 25, 0, 2228230, 25, 0, 2228231, 25, 0, 2228232, 25, 0, 2228233, 25, 0, 2228234, 25, 0, 2228235, 25, 0, 2228236, 25, 0, 2228237, 25, 0, 2228238, 25, 0, 2228239, 25, 0, 2228240, 25, 0, 2228241, 25, 0, 2228242, 25, 0, 2228243, 25, 0, 2228244, 25, 0, 2228245, 25, 0, 2228246, 25, 0, 2228247, 25, 0, 2228248, 25, 0, 2228249, 25, 0, 2228250, 25, 0, 2228251, 36, 0, 2228263, 35, 0, 2228264, 25, 0, 2228265, 25, 0, 2228266, 25, 0, 2228267, 25, 0, 2228268, 25, 0, 2228269, 25, 0, 2228270, 25, 0, 2228271, 25, 0, 2228272, 25, 0, 2228273, 25, 0, 2228274, 25, 0, 2228275, 25, 0, 2228276, 25, 0, 2228277, 25, 0, 2228278, 25, 0, 2228279, 25, 0, 2228280, 25, 0, 2228281, 25, 0, 2228282, 25, 0, 2228283, 25, 0, 2228284, 25, 0, 2228285, 25, 0, 2228286, 25, 0, 2228287, 25, 0, 2228288, 25, 0, 2228289, 25, 0, 2228290, 25, 0, 2228291, 25, 0, 2228292, 25, 0, 2228293, 20, 0, 2228294, 20, 0, 2228295, 20, 0, 2359258, 39, 0, 2293829, 20, 0, 2293830, 20, 0, 2293831, 20, 0, 2424794, 39, 0, 2359365, 20, 0, 2359366, 20, 0, 2359367, 20, 0, 2490330, 39, 0, 2424901, 20, 0, 2424902, 20, 0, 2424903, 20, 0, 2555866, 38, 0, 2555867, 37, 0, 2555868, 37, 0, 2555869, 37, 0, 2555870, 37, 0, 2555871, 37, 0, 2555872, 37, 0, 2555873, 37, 0, 2555874, 37, 0, 2555875, 37, 0, 2555876, 25, 0, 2555877, 25, 0, 2555878, 25, 0, 2555879, 25, 0, 2555880, 25, 0, 2555881, 25, 0, 2555882, 25, 0, 2555883, 25, 0, 2555884, 25, 0, 2555885, 25, 0, 2555886, 25, 0, 2555887, 25, 0, 2555888, 25, 0, 2555889, 25, 0, 2555892, 25, 0, 2555893, 25, 0, 2555894, 25, 0, 2555895, 25, 0, 2555896, 25, 0, 2555897, 25, 0, 2555898, 25, 0, 2555899, 25, 0, 2555900, 25, 0, 2555901, 25, 0, 2555902, 25, 0, 2555903, 25, 0, 2490368, 25, 0, 2490369, 25, 0, 2490370, 25, 0, 2490371, 25, 0, 2490372, 25, 0, 2490373, 25, 0, 2490374, 25, 0, 2490375, 25, 0, 2490376, 25, 0, 2490377, 25, 0, 2490378, 25, 0, 2490379, 25, 0, 2490380, 25, 0, 2490381, 25, 0, 2490382, 25, 0, 2490383, 25, 0, 2490384, 25, 0, 2490385, 25, 0, 2490386, 25, 0, 2490387, 25, 0, 2490388, 25, 0, 2490389, 25, 0, 2490390, 25, 0, 2490391, 25, 0, 2490392, 25, 0, 2490393, 25, 0, 2490394, 25, 0, 2490407, 35, 0, 2490408, 21, 0, 2490409, 21, 0, 2490410, 21, 0, 2490411, 21, 0, 2490412, 21, 0, 2490413, 21, 0, 2490414, 21, 0, 2490415, 21, 0, 2490416, 21, 0, 2490417, 21, 0, 2490418, 21, 0, 2490419, 21, 0, 2490420, 21, 0, 2490421, 21, 0, 2490422, 21, 0, 2490423, 21, 0, 2490424, 21, 0, 2490425, 21, 0, 2490426, 21, 0, 2490427, 21, 0, 2490428, 21, 0, 2490429, 21, 0, 2490430, 21, 0, 2490431, 21, 0, 2490432, 21, 0, 2490433, 21, 0, 2490434, 20, 0, 2490435, 20, 0, 2490436, 20, 0, 2490437, 20, 0, 2490438, 20, 0, 2490439, 20, 0, 2621425, 39, 0, 2621428, 35, 0, 2555931, 34, 0, 2555943, 35, 0, 2686961, 39, 0, 2686964, 35, 0, 2621467, 39, 0, 2621479, 35, 0, 2752497, 38, 0, 2752498, 37, 0, 2752499, 37, 0, 2752500, 36, 0, 2687003, 39, 0, 2687015, 35, 0, 2752539, 39, 0, 2752551, 35, 0, 2818075, 39, 0, 2818087, 35, 0, 2883611, 39, 0, 2883623, 35, 0, 2949147, 39, 0, 2949159, 35, 0, 3014683, 38, 0, 3014684, 37, 0, 3014685, 37, 0, 3014686, 37, 0, 3014687, 37, 0, 3014688, 37, 0, 3014689, 37, 0, 3014690, 37, 0, 3014691, 37, 0, 3014692, 37, 0, 3014693, 37, 0, 3014694, 37, 0, 3014695, 36, 0, 3801051, 20, 0, 3866588, 20, 0, 3866589, 20, 0, 3866590, 20, 0, 3866591, 20, 0, 3932128, 20, 0, 3932129, 20, 0, 3932130, 20, 0, 3997667, 20, 0, 4063204, 20, 0, 4128715, 20, 0, 4128716, 20, 0, 4128717, 20, 0, 4128718, 20, 0, 4128727, 20, 0, 4128728, 20, 0, 4128729, 20, 0, 4128740, 20, 0, 4194245, 20, 0, 4194246, 20, 0, 4194251, 20, 0, 4194252, 20, 0, 4194253, 20, 0, 4194254, 20, 0, 4194255, 20, 0, 4194256, 20, 0, 4194261, 20, 0, 4194262, 20, 0, 4194263, 20, 0, 4194276, 20, 0, 4259781, 20, 0, 4259782, 20, 0, 4259787, 20, 0, 4259792, 20, 0, 4259793, 20, 0, 4259797, 20, 0, 4259799, 20, 0, 4259811, 20, 0, 4325317, 20, 0, 4325318, 20, 0, 4325323, 20, 0, 4325324, 20, 0, 4325329, 20, 0, 4325333, 20, 0, 4325334, 20, 0, 4325335, 20, 0, 4325347, 20, 0, 4325348, 20, 0, 4325349, 20, 0, 4325350, 20, 0, 4325351, 20, 0, 4390852, 20, 0, 4390855, 20, 0, 4390860, 20, 0, 4390861, 20, 0, 4390862, 20, 0, 4390863, 20, 0, 4390864, 20, 0, 4390865, 20, 0, 4390871, 20, 0, 4390872, 20, 0, 4390888, 20, 0, 4390889, 20, 0, 4456388, 20, 0, 4456391, 20, 0, 4456401, 20, 0, 4456407, 20, 0, 4456409, 20, 0, 4456410, 20, 0, 4456425, 20, 0, 4456426, 20, 0, 4521924, 20, 0, 4521927, 20, 0, 4521937, 20, 0, 4521942, 20, 0, 4521947, 20, 0, 4521962, 20, 0, 4587460, 20, 0, 4587463, 20, 0, 4587473, 20, 0, 4587478, 20, 0, 4587484, 20, 0, 4587485, 20, 0, 4587498, 20, 0, 4652995, 20, 0, 4652996, 20, 0, 4652999, 20, 0, 4653008, 20, 0, 4653014, 20, 0, 4653022, 20, 0, 4653034, 20, 0, 4718531, 20, 0, 4718535, 20, 0, 4718544, 20, 0, 4718550, 20, 0, 4718558, 20, 0, 4718570, 20, 0, 4784071, 20, 0, 4784080, 20, 0, 4784086, 20, 0, 4784094, 20, 0, 4784104, 20, 0, 4784105, 20, 0, 4784106, 20, 0, 4849607, 20, 0, 4849615, 20, 0, 4849622, 20, 0, 4849630, 20, 0, 4849638, 20, 0, 4849639, 20, 0, 4849640, 20, 0, 4915143, 20, 0, 4915151, 20, 0, 4915158, 20, 0, 4915165, 20, 0, 4915166, 20, 0, 4915172, 20, 0, 4915173, 20, 0, 4980679, 20, 0, 4980687, 20, 0, 4980694, 20, 0, 4980698, 20, 0, 4980699, 20, 0, 4980700, 20, 0, 5046215, 20, 0, 5046222, 20, 0, 5046223, 20, 0, 5046230, 20, 0, 5046231, 20, 0, 5046232, 20, 0, 5046233, 20, 0, 5111751, 20, 0, 5111758, 20, 0, 5177287, 20, 0, 5242823, 20, 0, 5308359, 20, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 0 )

[node name="HolyDoor" parent="." instance=ExtResource( 5 )]
position = Vector2( -952, 240 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Wizard-Range" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 16, 452 )

[node name="Wizard-Range2" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 48, 452 )

[node name="Wizard-Range3" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -336, 600 )
attackspeed = 0.5

[node name="Goblin" parent="Enemies" instance=ExtResource( 9 )]
position = Vector2( -404, 284 )

[node name="Goblin2" parent="Enemies" instance=ExtResource( 9 )]
position = Vector2( -672, 236 )

[node name="Wizard-BEasy" parent="Enemies" instance=ExtResource( 8 )]
position = Vector2( -672, 320 )

[node name="Wizard-BEasy2" parent="Enemies" instance=ExtResource( 8 )]
position = Vector2( -476, 216 )

[node name="Goblin3" parent="Enemies" instance=ExtResource( 9 )]
position = Vector2( -544, 256 )

[node name="Dagger_OneUse" parent="." instance=ExtResource( 4 )]
position = Vector2( -208, 648 )

[node name="Key" type="Area2D" parent="."]
position = Vector2( -952, 220 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Key"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 512, 175, 15, 16 )

[node name="Gate" type="StaticBody2D" parent="."]
position = Vector2( 432, 588 )

[node name="Sprite" type="Sprite" parent="Gate"]
position = Vector2( 8, -20 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Sprite2" type="Sprite" parent="Gate"]
position = Vector2( 8, -4 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Sprite3" type="Sprite" parent="Gate"]
position = Vector2( 8, 12 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Sprite4" type="Sprite" parent="Gate"]
position = Vector2( 8, 28 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate"]
position = Vector2( 8, 0 )
shape = SubResource( 2 )

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 656, 580 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="Alter" parent="." instance=ExtResource( 10 )]
[connection signal="tree_exited" from="HolyDoor" to="." method="_on_HolyDoor_tree_exited"]
[connection signal="mouse_entered" from="Key" to="." method="_on_Key_mouse_entered"]
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
